--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@fullcalendar/core": "^4.0.1",
     "@fullcalendar/daygrid": "^4.0.1",
+    "@fullcalendar/list": "^4.0.1",
+    "@fullcalendar/resource-common": "^4.0.1",
+    "@fullcalendar/timegrid": "^4.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
