--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@fullcalendar/bootstrap": "^4.0.1",
     "@fullcalendar/core": "^4.0.1",
     "@fullcalendar/daygrid": "^4.0.1",
     "@fullcalendar/list": "^4.0.1",
     "@fullcalendar/resource-common": "^4.0.1",
     "@fullcalendar/timegrid": "^4.0.1",
+    "bcrypt": "^3.0.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "googleapis": "^27.0.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "~1.9.0",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.2.3"
   }
 }
