--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/list": "^4.0.1",
     "@fullcalendar/resource-common": "^4.0.1",
     "@fullcalendar/timegrid": "^4.0.1",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
