--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^27.0.0",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "sequelize": "^5.7.0"
