--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.16.1",
     "googleapis": "^27.0.0",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
